[package]
name = "lesspass"
version = "0.1.0"
authors = ["nonsense <nonsense0202@pm.me>"]
edition = "2018"
description = "CLI to generate lesspass passowrd"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex="0.4"
pbkdf2="0.3"
hmac = "0.7"
sha2 = "0.8"
uint = "0.8"
# TODO: once clap release v3.0, update this versioned crate.
clap = { git = "https://github.com/clap-rs/clap/" }
rpassword = "4"